p2-istio/cloud-sql-service-entry.yaml
  
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cloud-sql
  namespace: p2-namespace
spec:
  hosts:
  - cloud-sql.com
  addresses:
  - 10.42.224.3/32
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 5432
    name: postgresql
    protocol: TCP
  resolution: NONE
  location: MESH_EXTERNAL
  workloadSelector:
    labels:
      app: p2
